Terraform-eks/flaskapp-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: flaskapp
  name: flaskapp
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.network/web-network: "true"
        io.kompose.service: flaskapp
    spec:
      containers:
      - image: card0155/robust_ai:nlpFlask
        name: flaskapp
        ports:
        - containerPort: 5000
        resources: {}
      restartPolicy: Always
status: {}
